--- a/Handling Multipart form data using multer/views/host/home.ejs
+++ b/Handling Multipart form data using multer/views/host/home.ejs
@@ -42,6 +42,7 @@
                 </form>
                 <form action="/host/deleteHome" method="post" class="w-1/2">
                   <input type="hidden" value="<%= house._id%>" name="id">
+                  <input type="hidden" value="<%= house.photo%>" name="photo">
                   <button type="submit"
                     class="w-full rounded-lg p-2 bg-red-600 text-white font-semibold shadow hover:opacity-90 transition">
                     Delete
